--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,8 +5,8 @@
 # Set here configurations for the database connection
 
 # Connection url for the database "mycontact"
-spring.datasource.url=jdbc:mysql://localhost/icssee?useSSL=false
-#spring.datasource.url:jdbc:mysql://google/icssee?cloudSqlInstance=cedar-kiln-196802:us-central1:test&socketFactory=com.google.cloud.sql.mysql.SocketFactory&user=root&password=1234
+#spring.datasource.url=jdbc:mysql://localhost/icssee?useSSL=false
+spring.datasource.url:jdbc:mysql://google/icssee?cloudSqlInstance=cedar-kiln-196802:us-central1:test&socketFactory=com.google.cloud.sql.mysql.SocketFactory&user=root&password=1234
 # MySQL username and password 
 spring.datasource.username=root
 spring.datasource.password=1234
